--- a/pages/index.html
+++ b/pages/index.html
@@ -5,5 +5,10 @@
 </head>
 <body>
 	<h1> my cousera first page</h1>
+	<h2>hello thee</h2>
+	<h3>my name is</h3>
+	<script id="__bs_script__">//<![CDATA[
+    document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.26.14'><\/script>".replace("HOST", location.hostname));
+//]]></script>
 </body>
 </html>
