--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,8 @@
 	<h1> my cousera first page</h1>
 	<h2>hello thee</h2>
 	<h3>my name is</h3>
+	<h4> hello git
+	</h4>
 	<script id="__bs_script__">//<![CDATA[
     document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.26.14'><\/script>".replace("HOST", location.hostname));
 //]]></script>
